css/index.css
/* for milligram */
@import url('https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic');

/* base */
:root {
}

html body {
  --width: 100%;
}

/* File Editor */
.editor-preview-container {
  position: relative;
  min-height: 30rem;
}

.editor-preview-container iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* File Dropzone */
.dropzone-file-input {
  color: transparent !important;
  cursor: pointer;
}

/* File List */
.file-list {
  &:not(:has('>*')) {
    display: 'none';
  }
}

.file-list__item {
}

.file-list__filename {
  width: 100%;
  border: none;
  background: none;
  font-weight: bold;
  font-size: 0.9rem;
  white-space: normal;
  pointer-events: all;
  color: inherit;
  padding-block: 0;
  margin: 0;
  text-align: left;

  &:hover,
  &:focus,
  &.file-list__filename--selected {
    transform: translateX(0.3rem);
    color: var(--cemph);
  }
}

/* Input Smart Cover */
.input-smart-cover {
  position: relative;
  max-width: fit-content;
}

.input-smart-cover__btns {
  position: absolute;
  top: 0.3rem;
  right: 0.5rem;
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  backdrop-filter: invert(0.2);
  padding: 0.3rem;
  line-height: 1rem;
  border-radius: 3px;
}

.input-smart-cover__btn {
  height: 1rem;
  width: 1rem;
  cursor: pointer;
}

